[package]
name = "toyos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"]}

buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
spin = "0.7.0"
embedded-hal = {version="0.2.7", features = ["unproven"] }

lazy_static = {version = "1.4.0", features = ["spin_no_std"]}

k210-pac = { path = "../dependency/k210-pac" }
k210-hal = { path = "../dependency/k210-hal" }
k210-soc = { path = "../dependency/k210-soc" }

virtio-drivers = { path = "../dependency/virtio-drivers" }

easy_fs = {path = "../easy_fs"}

bit_field = "0.10.1"
nb = "1"

[build-dependencies]
chrono = "0.4"

[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true
